# libbeebimage

./: .overcommit.yml  AUTHORS.md  BbcImageLoader.cpp  BbcImageLoader.h  BbcImageLoaderC.cpp  BbcScreen.cpp  BbcScreen.h  BbcScreenC.cpp  CMakeLists.txt  README.md  ldpic.md
.git-hooks/pre_commit/: cppcheck.rb
.github/: dependabot.yml
.github/workflows/: ci.yml  prepare-release.yml
Examples/: Aworks (LdPic).bbg  Balls (Dump - Mode 0).bbg  Flower (Mode 1).bbg
